<resources>
    <string name="app_name">Student Object Task</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="rollno">Rollno</string>
    <string name="subject">Subject</string>
    <string name="enter_your_rollno">Enter Your Rollno</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_subject">Enter Your Subject</string>
    <string name="submit">Submit</string>
</resources>